Fixed overlap issue on footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,8 @@ html {
 }
 
 body {
+    position: relative;
+    padding-bottom: 3px;
     min-height: 100%;
     font-family: "Open Sans", sans-serif;
     background: whitesmoke;
@@ -101,7 +103,9 @@ span {
 }
 
 footer {
-   text-align: center;
+   position: absolute;
+   bottom: 10px;
+   right: 50%;
 }
 
 .instruction-body {
@@ -114,7 +118,7 @@ footer {
     margin-top: 15px;
     margin-bottom: 15px;
     font-family: "Open Sans", sans-serif;
-    height: 42vh;
+    height: auto;
 }
 
 .thumbnail {
@@ -306,7 +310,11 @@ button.theclick{
 
 .form-container {
     display: grid;
-    height: 90%;
+    min-height: 90%;
+}
+
+#btnAddIngredient {
+    margin-top: 10px;
 }
 
 .inputForm {
